--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,14 @@
 @import '~antd/dist/antd.css';
+
+.App {
+  display: flex;
+  flex-direction: column;
+  padding: 25px 16px;
+  min-height: 100vh;
+}
+
+.rightQustions {
+  color: #52c41a;
+  font-weight: 700;
+  font-size: 36px;
+}
