--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,42 @@
 }
 
 .rightQustions {
-  color: #52c41a;
   font-weight: 700;
   font-size: 36px;
+  background-color: var(--accent-color);
+  color: #fff;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: -25px;
+  margin-right: -50px;
+  position: relative;
+}
+
+.userContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 1.5em;
+}
+
+.timerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+}
+
+.timerContainer__icon {
+  margin-right: 5px;
+  margin-left: -30px;
+}
+
+.progress {
+  width: 75%;
+  margin: 0.25em auto 1em
 }
