--- a/src/components/PlayerStat/styles.css
+++ b/src/components/PlayerStat/styles.css
@@ -14,6 +14,12 @@
   position: relative;
 }
 
+.rightQustions_rival {
+  background-color: var(--error-color);
+  margin-right: initial;
+  margin-left: -60px;
+}
+
 .userContainer {
   display: flex;
   flex-direction: column;
