--- a/src/App.css
+++ b/src/App.css
@@ -4,4 +4,9 @@
   padding: 25px 16px;
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
+  overflow: hidden;
+
+  background: #2980B9;
+  background: linear-gradient(to top, #FFFFFF 33%, #6DD5FA 75%, #2980B9 100%);
+
 }
